--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,17 @@ services:
     restart: always
     volumes:
       - ./config.yml:/app/config.yml:ro
+
+# SpamAssassin is an optional service
+#  spamassassin:
+#    image: axllent/spamassassin
+#    ports:
+#      - "783:783"
+#    restart: always
+#    environment:
+#      - DNS_CHECKS=1
+#    volumes:
+#      - spamassassin_data:/var/lib/spamassassin
+#
+#volumes:
+#  spamassassin_data: {}
